# dexos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bootstrap.sh  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
bindings/py/: Cargo.toml  pyproject.toml
bindings/py/python/dexos/: __init__.py  _core.pyi
bindings/py/python/dexos/tests/: test_poc.py
bindings/py/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: poc.test.mjs
config/: dev.toml  eu.toml  light.toml  tokyo.toml  us.toml  validators.toml
conformance/: README.md  command_place_order.hex  submit_order_params.hex  vectors.json
crates/benchmarks/: Cargo.toml
crates/benchmarks/artifacts/20m/: authenticated-packed-admit-apple-arm64-v1.json  baseline-unoptimized-v1-evaluation.json  baseline-unoptimized-v1.json  durable-wal-append-apple-arm64-v1.json  matching-plan-neon-apple-arm64-v1.json  minimmit-weight-neon-apple-arm64-v1.json  minimmit-weight-xctrace-m3-options.json  packed-wire-size-v1.json  packed-x86_64-rosetta-determinism-v1.json
crates/benchmarks/src/: alloc.rs  composed.rs  composed_builder.rs  harness.rs  json.rs  lib.rs  report.rs  rng.rs  stats.rs  suites.rs  targets.rs
crates/benchmarks/workloads/: global-20m-v1.toml
crates/chain-adapter-svm/: Cargo.toml
crates/chain-adapter-svm/src/: lib.rs  mock_tests.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  packed.rs
crates/client/tests/: packed_connection.rs  packed_vectors.rs  round_trip.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs  packed_order.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: domain.rs  hash.rs  lib.rs  merkle.rs  quorum.rs  signature.rs
crates/custody/: Cargo.toml
crates/custody/src/: binding.rs  chain.rs  controller.rs  error.rs  lib.rs  policy.rs  session.rs  signer.rs  wire.rs  withdrawal.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  record.rs  service.rs  table.rs
crates/execution/: Cargo.toml
crates/execution/src/: command.rs  engine.rs  error.rs  idempotency.rs  ledger.rs  lib.rs  session.rs
crates/execution/src/engine/: state.rs  state_codec.rs
crates/execution/src/idempotency/: state.rs  state_codec.rs
crates/execution/src/ledger/: state.rs  state_codec.rs
crates/execution/src/session/: state.rs  state_codec.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: cache.rs  client.rs  discovery.rs  driver.rs  error.rs  lib.rs  proofs.rs  rpc.rs  sync.rs  verification.rs
crates/loadgen/: Cargo.toml
crates/loadgen/benches/: hot_path.rs
crates/loadgen/src/: campaign.rs  campaign_distributed.rs  command.rs  config.rs  distributed.rs  engine.rs  impairment.rs  lib.rs  live_packed.rs  live_rpc.rs  market.rs  measured.rs  metrics.rs  packed_adapter.rs  protocol.rs  realtime.rs  reference_sink.rs  rng.rs  rpc_adapter.rs  runtime.rs  scheduler.rs  sink.rs  timing.rs  topology.rs  util.rs  workload.rs
crates/markets/: Cargo.toml
crates/markets/src/: config.rs  error.rs  escrow.rs  lib.rs  lifecycle.rs  payout.rs  perpetual.rs  registry.rs  resolution.rs  sponsor.rs
crates/network/: Cargo.toml
crates/network/src/: authenticated_order_batch.rs  batch.rs  budget.rs  channel.rs  class_auth.rs  connection.rs  disconnect.rs  error.rs  framing.rs  lib.rs  loopback.rs  order_batch.rs  order_batch_receipt.rs  peer.rs  quic.rs  reconnect.rs  replay.rs  scheduler.rs  session.rs  tcp.rs  transport.rs  util.rs
crates/node/: Cargo.toml
crates/node/src/: batch_receipts.rs  config.rs  consensus_driver.rs  durable_packed.rs  error.rs  lib.rs  lowering.rs  metrics.rs  multi_packed_core.rs  packed_core.rs  packed_ingress.rs  packed_server.rs  readiness.rs  receipt_finality.rs  shard.rs  shutdown.rs  supervisor.rs  threading.rs
crates/node/tests/: config_examples.rs  scalar_payout_cross_crate.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: book.rs  book_tests.rs  conditional.rs  conditional_tests.rs  dedup.rs  error.rs  level.rs  lib.rs  order.rs  slab.rs  state.rs
crates/prediction-markets/: Cargo.toml
crates/prediction-markets/src/: committee.rs  completeset.rs  definition.rs  lib.rs  lifecycle.rs  outcome.rs  scalar.rs  settlement.rs
crates/proto/: Cargo.toml
crates/proto/src/: command.rs  lib.rs  packed.rs  response.rs  stream.rs  transport.rs
crates/risk/: Cargo.toml
crates/risk/src/: config.rs  engine.rs  error.rs  lib.rs  liquidation.rs  math.rs  position.rs  scenario.rs  state.rs  state_codec.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: backend.rs  command.rs  error.rs  idempotency.rs  lib.rs  limits.rs  metrics.rs  request.rs  response.rs  server.rs  session.rs  stream.rs  stub.rs  tests.rs  tls.rs  transport.rs  wire.rs  work.rs
crates/sdk/: Cargo.toml
crates/sdk-core/: Cargo.toml
crates/sdk-core/src/: abi_freeze.rs  builders.rs  convert.rs  lib.rs  poc.rs  signer.rs  transport.rs
crates/sdk/src/: lib.rs  tcp.rs  tls.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: cluster.rs  lib.rs  minimmit_cluster.rs  minimmit_node.rs  minimmit_tests.rs  node.rs  oracle.rs  rng.rs  scenario.rs  scheduler.rs  transport.rs
crates/state-tree/: Cargo.toml
crates/state-tree/src/: checkpoint.rs  leaf.rs  lib.rs  tree.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ADR_MINIMMIT_BLS_CERTIFICATES.md  ARCHITECTURE.md  CLI.md  CONSENSUS_MINIMMIT.md  DOMAINS.md  FEATURES.md  LOADGEN_20M_CONTRACT.md  MINIMMIT_CONFORMANCE.md  ORDER_AND_INSTRUMENT_FORMATS.md  PACKED_ORDER_WIRE.md  PERFORMANCE.md  PERFORMANCE_20M.md  PRODUCTION_READINESS_REVIEW.md  SDK.md  SECURITY.md  TOOLCHAIN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: packed_order_decode.rs
scripts/: benchmark-single-market.sh  build-release-artifacts.sh  check-core-deps.sh  check-determinism.sh  check-loadgen-hot-path.sh  check-no-float.sh  check-unsafe.sh  check-workflows.sh  fuzz-stub.sh  (+14 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/dexos_sdk/: __init__.py  packed.py
sdk/python/tests/: test_packed.py
ui/desktop/: Cargo.toml
ui/desktop/src/: main.rs
(+168 files in other folders)
