[workspace]
resolver = "2"
members = ["crates/*", "bin/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.92"
repository = "https://github.com/joeblau/dexos"
# Application workspace: crates reference each other by path and are not published
# to a registry. Marking them unpublishable also lets cargo-deny's wildcard gate
# exempt intra-workspace path dependencies (allow-wildcard-paths).
publish = false

# Engineering standards, mechanically enforced.
#
# `unsafe_code = "deny"` makes unsafe a hard error by default. The only sanctioned
# escape hatch is a narrow, documented, per-item opt-in inside an isolated performance
# module — e.g.
#
#     #[allow(unsafe_code)] // SAFETY: <invariant>, covered by <test>
#     unsafe { ... }
#
# See docs and the `scripts/check-unsafe.sh` gate. The deterministic execution core
# (types, execution, orderbook, risk, state-tree) additionally forbids floating point
# (scripts/check-no-float.sh) and any dependency on async runtimes or I/O crates
# (scripts/check-core-deps.sh).
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Silent integer truncation and undocumented panics are disallowed by spec; surface them.
cast_possible_truncation = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
sha2 = "0.10"
sha3 = "0.10"
postcard = { version = "1", features = ["use-std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
# Authenticated transport encryption (peer session layer): ephemeral X25519 ECDH,
# HKDF-SHA256 key derivation, ChaCha20-Poly1305 AEAD.
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
getrandom = "0.2"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"

# Thin release profile suitable for latency benchmarking later phases will tune.
# Exchange kernels abort on panic so a single task panic cannot unwind across
# the process and leave partial state; operators restart from the last durable
# checkpoint instead.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

# Production-equivalent optimization with symbols for `perf`/flamegraphs.
[profile.release-with-debug]
inherits = "release"
debug = 1

[profile.bench]
inherits = "release"
debug = 1
