[workspace]
resolver = "2"
members = ["crates/*", "bin/*", "ui/*", "bindings/*"]
# Bare `cargo build`/`test`/`run` (no `-p`/`--workspace`) operate on the engine
# only, so day-to-day engine work never compiles the heavy Dioxus `ui/*` tree.
# CI builds the apps in a dedicated `apps` job (wasm web + native desktop/mobile);
# the engine's `--workspace` gates pass `--exclude dexos-{ui,web,desktop,mobile}`
# so they never pull in the Dioxus tree. See `.github/workflows/ci.yml`.
default-members = ["bin/marketd", "bin/dexos", "bin/market-loadgen", "crates/types"]
# `bindings/*` globs in the two Rust FFI crates (bindings/{wasm,py}). `bindings/ts`
# is a TypeScript/npm package, not a cargo crate — a glob-matched directory with
# no Cargo.toml is a hard error, so it is excluded from the workspace explicitly.
exclude = ["bindings/ts"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.92"
repository = "https://github.com/joeblau/dexos"
# Application workspace: crates reference each other by path and are not published
# to a registry. Marking them unpublishable also lets cargo-deny's wildcard gate
# exempt intra-workspace path dependencies (allow-wildcard-paths).
publish = false

# Engineering standards, mechanically enforced.
#
# `unsafe_code = "deny"` makes unsafe a hard error by default. The only sanctioned
# escape hatch is a narrow, documented, per-item opt-in inside an isolated performance
# module — e.g.
#
#     #[allow(unsafe_code)] // SAFETY: <invariant>, covered by <test>
#     unsafe { ... }
#
# See docs and the `scripts/check-unsafe.sh` gate. The deterministic execution core
# (types, execution, orderbook, risk, state-tree) additionally forbids floating point
# (scripts/check-no-float.sh) and any dependency on async runtimes or I/O crates
# (scripts/check-core-deps.sh).
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Silent integer truncation and undocumented panics are disallowed by spec; surface them.
cast_possible_truncation = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
lz4_flex = "0.13.1"
sha2 = "0.10"
sha3 = "0.10"
postcard = { version = "1", features = ["use-std"] }
ed25519-dalek = { version = "3", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
# Authenticated transport encryption (peer session layer): ephemeral X25519 ECDH,
# HKDF-SHA256 key derivation, ChaCha20-Poly1305 AEAD.
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
hkdf = "0.12"
getrandom = "0.2"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
arrayvec = "0.7.8"
# Dioxus 0.7 multiplatform UI. Only the `ui/*` frontend crates depend on this;
# the deterministic engine never does. Each app selects its renderer via the
# per-crate `dioxus` features (web/desktop/mobile/server + fullstack).
dioxus = { version = "0.7" }

# --- Client SDK (Phases 0-3): wasm(npm) + python(pip) + native rust bindings. ---
# Only the `crates/{sdk-core,sdk,xtask}` and `bindings/*` crates use these; the
# deterministic engine never does. `wasm-bindgen` MUST equal the wasm-pack CLI's
# bundled bindgen (Cargo.lock pins 0.2.126). `tokio-rustls`/`rustls` reuse the
# exact versions/features `rpc` already links, so no new version enters the graph.
wasm-bindgen = "=0.2.126"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
pyo3 = { version = "0.23", default-features = false }
pyo3-stub-gen = "0.6"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-native-certs = "0.8"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "limit"] }

# Thin release profile suitable for latency benchmarking later phases will tune.
# Exchange kernels abort on panic so a single task panic cannot unwind across
# the process and leave partial state; operators restart from the last durable
# checkpoint instead.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

# Production-equivalent optimization with symbols for `perf`/flamegraphs.
[profile.release-with-debug]
inherits = "release"
debug = 1

[profile.bench]
inherits = "release"
debug = 1
