[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dexos"
version = "0.1.0"
description = "DexOS client SDK (python binding over the shared Rust core)"
requires-python = ">=3.9"
license = { file = "../../LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
module-name = "dexos._core"
manifest-path = "Cargo.toml"
python-source = "python"
# maturin passes this to cargo so the wheel gets pyo3/extension-module; the
# feature is non-default so `cargo build` on the host still works without it.
features = ["extension-module"]
# Ship the generated type stub + PEP 561 marker so `dexos._core` is typed.
# (Both live under python-source and are packaged anyway; listed explicitly so
# the intent is unambiguous.)
include = ["python/dexos/_core.pyi", "python/dexos/py.typed"]
