[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
orderbook = { path = "../orderbook" }
risk = { path = "../risk" }
execution = { path = "../execution" }
