[package]
name = "chain-adapter-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Opt-in, deterministic in-memory `MockSvmAdapter` for tests and simulations.
# The production node binary depends on this crate *without* this feature, so
# the mock is never linked into a release build.
mock = []

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
chain-adapter = { path = "../chain-adapter" }
