[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

# A native RPC client for the DexOS node. Wraps the transport-free `proto` wire
# types with `rpc`'s plaintext-TCP `round_trip` into a small typed `Client`,
# generalizing the request-building + ed25519 signing that `bin/dexos` does
# inline. Consumed by the native frontends (desktop/mobile) and the web app's
# server side. Native only — it links `rpc` (tokio/rustls) and is not a wasm dep.
[dependencies]
proto = { path = "../proto" }
rpc = { path = "../rpc" }
crypto = { path = "../crypto" }
types = { path = "../types" }
codec = { path = "../codec" }
network = { path = "../network" }
thiserror.workspace = true
tokio.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
