[package]
name = "codec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true

[dev-dependencies]
crypto = { path = "../crypto" }
