[package]
name = "custody"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
k256.workspace = true
