[package]
name = "discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
codec = { path = "../codec" }
network = { path = "../network" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
