[package]
name = "light-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
codec = { path = "../codec" }
consensus = { path = "../consensus" }
tokio.workspace = true
