[package]
name = "loadgen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
codec = { path = "../codec" }
proto = { path = "../proto" }
crypto = { path = "../crypto" }
network = { path = "../network" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2.workspace = true
tokio.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
rpc = { path = "../rpc" }
