[package]
name = "markets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
risk = { path = "../risk" }
orderbook = { path = "../orderbook" }
serde.workspace = true
thiserror.workspace = true
postcard.workspace = true
