[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
tokio.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
getrandom.workspace = true
serde.workspace = true
