[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
# Real QUIC transport (independent streams + native datagrams) via quinn/rustls.
# When disabled, `network::quic_supported()` is false and node config must keep
# enable_quic / enable_datagrams off (fail-closed).
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:rustls-pki-types", "dep:bytes"]

[dependencies]
types = { path = "../types" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
tokio.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
getrandom.workspace = true
serde.workspace = true
socket2 = "0.6"
# Optional QUIC stack (feature = "quic").
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", optional = true }
rustls-pki-types = { version = "1", optional = true }
bytes = { version = "1", optional = true }
