[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["metrics-http"]
dev-tools = ["dep:loadgen"]
mock-chains = ["chain-adapter-evm/mock", "chain-adapter-svm/mock"]
# Prometheus /livez scrape server (always available; bound only when
# observability.metrics_listen is set). Kept as a feature so production
# binaries can strip it if desired.
metrics-http = []
simd = []

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
codec = { path = "../codec" }
state-tree = { path = "../state-tree" }
orderbook = { path = "../orderbook" }
risk = { path = "../risk" }
execution = { path = "../execution" }
oracle = { path = "../oracle" }
markets = { path = "../markets" }
prediction-markets = { path = "../prediction-markets" }
decision-markets = { path = "../decision-markets" }
custody = { path = "../custody" }
chain-adapter = { path = "../chain-adapter" }
chain-adapter-evm = { path = "../chain-adapter-evm" }
chain-adapter-svm = { path = "../chain-adapter-svm" }
storage = { path = "../storage" }
consensus = { path = "../consensus" }
network = { path = "../network" }
discovery = { path = "../discovery" }
rpc = { path = "../rpc" }
light-client = { path = "../light-client" }
observability = { path = "../observability" }
loadgen = { path = "../loadgen", optional = true }
serde.workspace = true
toml.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
