[package]
name = "orderbook"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
simd = { path = "../simd" }
serde.workspace = true
thiserror.workspace = true
