[package]
name = "prediction-markets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
