[package]
name = "risk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
crypto = { path = "../crypto" }
types = { path = "../types" }
serde.workspace = true
thiserror.workspace = true
