[package]
name = "rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
