[package]
name = "rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tracing.workspace = true
# Public RPC TLS 1.3 (no OpenSSL; banned by cargo-deny). TLS 1.2 is intentionally
# not enabled — production accepts TLS 1.3 only.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
# Test / local-dev self-signed cert generation (also usable by operators for
# throwaway local listeners; production should supply real PEM material).
rcgen = "0.13"
