[package]
name = "rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Transport-free wire/protocol types (request/response/command/stream/error).
# The async server layers below add tokio/rustls on top of these.
proto = { path = "../proto" }
types = { path = "../types" }
codec = { path = "../codec" }
crypto = { path = "../crypto" }
# Lock-free counters/gauges for the flood-facing shed paths (rpc is an edge
# crate, not the deterministic core; metrics are pure side state).
observability = { path = "../observability" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tracing.workspace = true
# Errno constants (EMFILE/ENFILE/ENOBUFS/ENOMEM) for classifying accept()
# failures: std has no stable `io::ErrorKind` for FD exhaustion (they decode
# to `Uncategorized`), so the accept loop matches raw OS error codes. Already
# in-tree transitively via tokio.
libc = "0.2"
# Public RPC TLS 1.3 (no OpenSSL; banned by cargo-deny). TLS 1.2 is intentionally
# not enabled — production accepts TLS 1.3 only.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
# Test / local-dev self-signed cert generation (also usable by operators for
# throwaway local listeners; production should supply real PEM material).
rcgen = "0.14"
