[package]
name = "dexos-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version = "1.92"  # floored by 1.92-pinned path deps (types/codec/crypto/proto)
repository.workspace = true
publish = false                     # Phase 4: true (+ description/readme/keywords)

[lints]
workspace = true

# The native rust SDK: `dexos-sdk-core` (all wire logic) plus this crate's own
# tokio + tokio-rustls TLS 1.3 transport. It deliberately does NOT depend on
# `rpc`/`network`/`observability`, so its published dependency graph stays clean.
# The TLS versions/features match what `rpc` already links (no new version).
[features]
default = ["native-transport"]
native-transport = ["dep:tokio", "dep:tokio-rustls", "dep:rustls", "dep:rustls-native-certs"]
core-only = []

[dependencies]
dexos-sdk-core = { path = "../sdk-core" }
proto = { path = "../proto" }
types = { path = "../types" }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
