[package]
name = "simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
minimmit = []

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
codec = { path = "../codec" }
consensus = { path = "../consensus" }
thiserror = { workspace = true }
