[package]
name = "state-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
