[package]
name = "dexos-xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version = "1.92"  # floored by 1.92-pinned path deps (types/codec/crypto/proto)
repository.workspace = true
publish = false

[lints]
workspace = true

# Conformance-vector generator for the client SDKs. Reuses the SSoT logic in
# `dexos-sdk-core` (never re-deriving any wire logic) and writes the committed
# golden corpus to the workspace root's `conformance/` directory.
[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
dexos-sdk-core = { path = "../sdk-core" }
serde_json.workspace = true
hex = { workspace = true }
